--- a/src/Components/Bottom/Bottom.css
+++ b/src/Components/Bottom/Bottom.css
@@ -1,5 +1,6 @@
 .bottom{
-    min-height: 10em;
+    min-height: 10                                      em;
     width: 100%;
     border: 3px solid blue;
+    border-radius: 10px;
 }
