--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,7 @@
 body{
   border: 5px solid red;
   min-height: 100vh;
+  border-radius: 10px;
 }
 
 .container{
@@ -13,6 +14,7 @@ body{
   min-height: 90vh;
   width: 95vw;
   margin: 25px auto;
+  border-radius: 10px;
 }
 
 .content{
