--- a/src/Components/Account/Account.css
+++ b/src/Components/Account/Account.css
@@ -3,14 +3,16 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 0 50px;
-    height: 50px;
+    padding: 0 90px;
+    width: 100vw;
+    height: 40px;
     background-color: rgb(31, 31, 31)
     /* background-color: white; */
 }
 
 .free-shipping{
     color: rgb(214, 214, 214);
+    font-size: 13px;
 }
 
 .account a{
