--- a/src/Components/Slider/Slider.css
+++ b/src/Components/Slider/Slider.css
@@ -1,10 +1,61 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap');
+
 .slider-container{
-    width: 200%;
-    margin: auto;
+    /* border: 10px solid black; */
+    width: 100vw;
+    overflow: hidden;
+}
+.slider-images{
     display: flex;
+    /* transition: 2s; */
+    /* transform: translateX(-100%); */
 }
 
-.slider-image img{
-    width: 100vw;
-    height: 100vh;
+.slider-images li{
+    list-style: none;
+    position: relative;
 }
+
+.slider-images li img{
+    padding: 0 100px;
+    width: 100vw;
+    height: 600px;
+}
+.slider-images p{
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    z-index: 1; 
+}
+.slider-images p{
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    z-index: 1; 
+    font-family:"Nunito", sans-serif;;
+}
+
+.slider-images li p span:nth-child(1) {
+    font-size: 20px;
+    
+  }
+  
+  .slider-container .slider-images li p span:nth-child(2) {
+    font-size: 50px;
+    font-weight: bold;
+  }
+
+.slider-container ul li:nth-child(1) p{
+    top: 100px; 
+    left: 800px;
+  }
+.slider-container ul li:nth-child(2) p{
+    top: 100px; 
+    left: 200px;
+  }
+.slider-container ul li:nth-child(3) p{
+    top: 100px; 
+    left: 250px;
+  }
+
+
