--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -22,12 +22,14 @@
 
 .nav-items li{
     list-style-type: none;
+    text-align: center;
 }
 
 .nav-items{
     display: flex;
     gap: 50px;
     align-items: center;
+    position: relative;
 }
 
 
@@ -35,14 +37,53 @@
     width: 200px;
 }
 
-.shop{
-    position: relative;
-}
-
 .inside-shop{
     /* display: none; */
+    color: rgb(236, 236, 236);
+    padding: 20px;
     display: flex;
     position: absolute;
     z-index: 99;
+    background-color: white;
+    border-radius: 10px;
+    width: 500px;
+    height: 0px;
+    opacity: 0%;
+    right: 50px;
+    font-family: "Source Code Pro", monospace;
+    transition: 0.2s ease-in-out;
     /* text-align: center; */
+    overflow: hidden;
+}
+
+.shop-name:hover + .inside-shop{
+    opacity: 100;
+    background-color: rgb(0, 0, 0, 0.829);
+    height: 300px;
+}
+
+.inside-shop li a{
+    color: rgb(233, 229, 229);
+    font-size: 14px;
+}
+.inside-shop ul li{
+    line-height: 25px;
+}
+.explore p{
+    margin-top: 10px;
+    font-size: 14px;
+}
+.explore img{
+    width: 200px;
+}
+
+.man, .woman, .explore{
+    border-right: 1px solid rgb(150, 148, 148);
+    padding: 10px;
+}
+
+.word{
+    font-size: 17px;
+    font-weight: bold;
+    margin-bottom: 15px;
 }
