--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -56,6 +56,12 @@
     overflow: hidden;
 }
 
+.inside-shop.active {
+    opacity: 100%;
+    background-color: rgb(0, 0, 0, 0.829);
+    height: 300px;
+  }
+
 .shop-name:hover + .inside-shop{
     opacity: 100;
     background-color: rgb(0, 0, 0, 0.829);
